--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_landing">Landing</string>
     <string name="title_activity_saved_contacts">SavedContacts</string>
     <string name="theFieldContainsAnError">El campo contiene un error</string>
+    <string name="downloadingContacts">Descargando contactos</string>
 </resources>
