--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="downloadingContacts">Descargando contactos</string>
     <string name="downloadFailed_U">DESCARGA FALLIDA</string>
     <string name="continue_U">CONTINUAR</string>
+    <string name="title_activity_view_downloaded_contacts">ViewDownloadedContacts</string>
+    <string name="downloadCompleted">¡Descarga completada!</string>
+    <string name="goBack">Ir atrás</string>
+    <string name="contacts_U">CONTACTOS</string>
 </resources>
