Advancing on the ViewDownloadedContactsPage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="downloadCompleted">¡Descarga completada!</string>
     <string name="goBack">Ir atrás</string>
     <string name="contacts_U">CONTACTOS</string>
+    <string name="contactsPageActions">Contacts page actions</string>
+    <string name="contactSearchOptions">Contact search options</string>
 </resources>
