--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="contacts_U">CONTACTOS</string>
     <string name="contactsPageActions">Contacts page actions</string>
     <string name="contactSearchOptions">Contact search options</string>
+    <string name="name">Nombre</string>
 </resources>
