Passing info of user to detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="savingContactsInApp">Guardando contactos en la APP</string>
     <string name="contactsSaved_E">¡Contactos guardados!</string>
     <string name="savingError_U">ERROR GUARDADO</string>
+    <string name="title_activity_contact_detail">ContactDetail</string>
+    <string name="detailContactHeaderWallpaper">Detail contact header wallpaper</string>
 </resources>
