--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="telephone">Teléfono</string>
     <string name="location">Dirección</string>
     <string name="mapImage">Map image</string>
+    <string name="information_U">INFORMACIÓN</string>
 </resources>
